Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -107,28 +107,26 @@ Space \sep Initial conditions \sep Sensitivity \sep ABM
 \section{Introduction}
 %%%%%%%%%%%%%%%%%%%%%%
 
-Computer simulation has been recognised and increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}\added{, what has been synthesized as the emerging field of geosimulation by \cite{benenson2004geosimulation}.} Simulation also appears as a way to overcome the difficult analytic resolution of many spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of path-dependent social and ecological systems. The specificity of geographical models compared to other social sciences' models is that space and spatial interactions are given a prime role, as geographers are driven by an explicit interest in studying the way space influences the outcomes of the model in understanding the role of space on social interactions and environmental processes, in a city for example. We think \replaced{that simulation approaches are uniquely positioned to represent the complexity of socio-spatial interactions}{simulation can become a very good tool to achieve this}, provided that models include relevant spatial descriptions and behavioural rules which take space into account, and provided that the model evaluation includes a sensitivity analysis of output variations to the way space is represented. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model.\\
+Computer simulation has been recognised and \added{is }increasingly used by geographers as an efficient tool to explore geographical processes, hypotheses and predictive scenarios within virtual laboratories \citep{batty1971modelling, batty2007model, carley1999generating, Quesneletal2009}\added{. It has been identified as an emerging field and coined under the term geosimulation by \cite{benenson2004geosimulation}.} Simulation also appears as a way to overcome the difficult analytic resolution of many spatial models which were developed in the past, as well as to explore the possible (alternative) trajectories of path-dependent social and ecological systems. The specificity of geographical models compared to other social science models is that space and spatial interactions are given a prime role, \deleted{as }geographers \replaced{being}{are} driven by an explicit interest in studying the way space influences the outcomes of \replaced{social processes modelled.}{the model in understanding the role of space on social interactions and environmental processes, in a city for example}. We think \replaced{that simulation approaches are uniquely positioned to represent the complexity of socio-spatial interactions}{simulation can become a very good tool to achieve this}, provided that models include relevant spatial descriptions and behavioural rules which take space into account, and provided that the model evaluation includes a sensitivity analysis of \replaced{the model outputs}{ variations} to the way space is represented. Unfortunately, the first condition is not always met, and the second is seldom even mentioned. This paper aims to fill a methodological and conceptual gap, which is a systematic testing of the sensitivity of a model's outcomes to its initial spatial conditions. To demonstrate the genericity of our approach, we develop two applications with classic simulation models commonly used as case studies for comparing and aligning simulation models \citep{Axtelletal1996, wilensky2007making}: \citet{schelling1971dynamic}'s model of segregation and \citet{EpsteinAxtell1996}'s Sugarscape model.\\
 
 \subsection{Definition of the problem}
 
-Geographical systems can be crudely described as social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects, also known as path-dependent \citep{arthur1994increasing}. Therefore, observing a system at different points in time does not equate to observing \added{a} different systems at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex system generally, a given configuration contains clues on past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual cities and changing social environments over time prohibits the use of ergodic models... which are the main models to be found in geosimulation.
+Geographical systems can be crudely described as social agents interacting with one another, within a limited portion of space. Social agents thus constitute the microscopic level of the system, and they are framed by a system-time that evolves irreversibly, creating temporal and cumulative effects, also known as path-dependency \citep{arthur1994increasing}. Therefore, observing a system at different points in time does not equate to observing different systems at a single point in time. This general property of ergodicity applies to geographical elements such as road networks or built-up areas \citep{pumain2003approche}. Similarly to what \citet{gell1995quark} calls \emph{frozen accidents} in complex systems generally, a given configuration contains clues \replaced{about}{on} past bifurcations, that can have had dramatic effects on the state of the system. Therefore, strong spatio-temporal path-dependencies in the trajectory of individual cities and changing social environments over time prohibits the use of ergodic models. \replaced{Ironically, these very models tend to be the models most frequently used}{.. which are the main models to be found} in geosimulation.
 
 
-Self-organization has been shown to be a central feature of geographical systems in general and cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, Batty2007}. Complexity is partially due to bifurcations, which are determinant in spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as other initial conditions, but of more interest to the geographer. \\
+Self-organization has been shown to be a central feature of geographical systems in general and of cities in particular ~\citep{AllenSanglier1981,saint1989villes, Portugali2000}. In the vocabulary of complex systems, cities also exhibit emergent properties at macroscopic scales~\citep{pumain2006hierarchy, AzizAlaouiBertelle2009}, which can be simulated through microscopic interactions between agents~\citep{Wu2002, Batty2007}. Complexity is partially due to bifurcations, which are determinant in spatial systems~\citep{Wilson1981, Wilson2002}. Indeed, in spatially explicit simulation models, the non-linearity of local interactions is very likely to sublimate small perturbations in the initial spatial setting, making it difficult to interpret the resulting global structures. In that sense, the impact of initial \emph{spatial} settings on final outcomes is assumed to be significant just as \added{any }other initial conditions, but of more interest to the geographer. \\
 
 
-Finally, although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) is far from isotropic, even in the most sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most geographical models, especially cellular automata, still represent cities as uniform grids of isotropic densities. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents is still approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of the urban processes under inquiry because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they want to live in \citep{SpielmanHarrison2014}, or agents can move around and sense their environment up to a certain distance, so that the resulting number of sensed objects will depend on the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers represent space is therefore a central element of geographical simulation models. However, this step is rarely explicit. For example
+Finally, although this may seem obvious, cities are not regular grids, and the distribution of density (of jobs, residents, buildings, etc.) is far from isotropic, even in \deleted{the most }sprawled cities. On the contrary, there is a significant diversity in the way people, activities and structures are distributed in cities. In Europe for example, \citet{LeNechet2015} quantifies and classifies six broad types of residential density distributions. However, most geographical models, especially cellular automata, still represent cities as uniform grids of isotropic density. Even in applied cases when GIS geometries of a particular city are used, the spatial distribution of agents \replaced{tend to be}{is still} approximated by a constant density \citep{arribas2014diverse}, although previous research shows that it is computationally and methodologically feasible to use accurate locations in a simple model such as Schelling's \citep{benenson2002entity}. The isotropic simplification is potentially harmful to the representation of urban processes \deleted{under inquiry }because density and accessibility have environmental, economic and social consequences. Additionally, we expect the initial spatial distribution of agents to influence simulation results in the long run \citep{Castellanoetal2009}, because the agents' rule of action itself may depend on the spatial structure of the environment. For example, households can have different preferences with respect to the built-environment they \added{might} want to live in \citep{SpielmanHarrison2014}, or agents \replaced{moving around will sense a different set of objects within the same fixed radius depending on}{can move around and sense their environment up to a certain distance, so that the resulting number of sensed objects will depend on} the topology \citep{Banos2012} and distribution of density of the sensed environment \citep{LauriJaggi2003, FossettDietrich2009}. The way modellers represent \added{initial} space is therefore a central element of geographical simulation models. However, this step is rarely explicit. \deleted{For example
 
-and authors tend to generalise the conclusion of the model from a single spatial case study (be it a theoretical pattern or a singular empirical one. A meaningful way of representing space might thus be to consider, not necessarily the peculiarities of every city, but at least their broad density structures so as to estimate the variability of the model behaviour in plausible spatial arrangements.
+and authors tend to generalise the conclusion of the model from a single spatial case study (be it a theoretical pattern or a singular empirical one. }A meaningful way of representing \added{initial} space might \deleted{thus }be to consider, not necessarily the peculiarities of every city, but at least their broad density structures so as to estimate the variability of the model behaviour \replaced{to different}{in} plausible spatial arrangements.
 
 \subsection{Objective}
 
-In this paper, we offer a methodological solution to the problem of sensitivity of simulation models to initial spatial conditions with two application cases (Schelling and Sugarscape). In no way do we want to provide a full exploration of these two particular models, their attractors and/or potential policy implications. Instead, we present a way of performing a sensitivity analysis to the spatial conditions of models by using a spatial generator to produce a variety of density grids, which are then fed into simulation models at initialisation. The generator being controlled by \replaced{it own}{meta-} parameters, we can then relate the parameters used to generate initial spatial conditions to the variation in outcome of the simulations. The purpose is two-fold: (i) to test the robustness of simulation results to small variations of \replaced{generator}{meta-} parameters and (ii) to study the non-trivial effects of typical categories of spatial distribution (monocentric \textit{vs.} polycentric for example) on the results of a given model. Our approach allows for a systematic comparison of several aspects of the spatial configuration problem, which have been suggested by \citet{filatova2013spatial}, but hardly implemented and achieved in previous studies. In particular, it is applied to the effects of urban form on simulation results, using Schelling's model as a first case study and Sugarscape as a second one. 
+In this paper, we offer a methodological solution to the problem of sensitivity of simulation models to initial spatial conditions with two application cases (Schelling and Sugarscape). In no way do we \replaced{pretend}{want} to provide a full exploration of these two particular models, their attractors and/or potential policy implications. Instead, we present a way of performing a sensitivity analysis to \replaced{initial}{the} spatial conditions of models by using a spatial generator to produce a variety of density grids, which are \replaced{taken as input by}{then fed into} simulation models at initialisation. The generator being controlled by \replaced{its own}{meta-} parameters, we can then relate the parameters used to generate initial spatial conditions to the variation \replaced{simulation outcomes}{in outcome of the simulations}. The purpose is two-fold: (i) to test the robustness of simulation results to small variations of \replaced{generator}{meta-} parameters and (ii) to study the non-trivial effects of typical categories of spatial distribution (monocentric \textit{vs.} polycentric for example) on the results of a given model. Our approach allows for a systematic comparison of several aspects of the spatial configuration problem, which have been suggested by \citet{filatova2013spatial}, but hardly implemented and achieved in previous studies \added{to our knowledge}. In particular, it is applied to the effects of urban form on simulation results, using Schelling's model as a first case study and Sugarscape as a second one. 
 
 %%%%%%%%%%%%%%%%%%%%%%
 \subsection{Previous considerations on the effects of the spatial configuration in simulation models}
-
-
 
 In 'real-life', different spatial configurations of people in a city tend to be associated with different distributions of income, carbon emissions, educational outcomes, etc. For example, \citet{wheeler2006urban} shows that, in the US, sprawling cities are more unequal than their compact counterparts with respect to income. Dynamically, sprawl consists in the addition of new developments which have been occupied by different groups of population, resulting in a concentration of the wealthy in suburban pockets and of pockets of poverty in the inner city area \citep{jargowsky2002sprawl}. Similarly, in terms of pollution for example, \citet[p.173]{schwanen2001travel} show that \textit{``deconcentration of urban land uses encourages driving and discourages the use of public transport as well as cycling and walking''}. The discussion of these effects has also been associated with the field of geostatistics since the exposure of the Modifiable Areal Unit Problem (MAUP) \citep{Openshaw1984, FotheringhamWong1991}. For example, \citet{Kwan2012} has argued for a careful examination of what she coins the 'uncertain geographic context problem' (UGCoP), i.e. of the spatial configuration of geographical units even when the size and delineation of the area are the same.\\
 
@@ -181,7 +179,7 @@ To our knowledge there exist no single well established method to compare phase 
 d_r\left(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2}\right) = 2 \cdot \frac{d(\mu_{\vec{\alpha}_1},\mu_{\vec{\alpha}_2})^2}{Var\left[\mu_{\vec{\alpha}_1}\right] + Var\left[\mu_{\vec{\alpha}_2}\right]}
 \end{equation}
 
-where $\mu_{\vec{\alpha}_i}$ are the phase diagrams at given \replaced{generator}{meta-} parameters $\vec{\alpha}_i$. $d$ is a functional distance that we take simply as Euclidian distance. The internal variabilities are estimated as the variance within each phase diagram $f_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we sum these relative distances over the components. 
+where $\mu_{\vec{\alpha}_i}$ are the phase diagrams at given \replaced{generator}{meta-} parameters $\vec{\alpha}_i$. $d$ is a functional distance that we take simply as Euclidian distance. The internal variabilities are estimated as the variance within each phase diagram $f_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we \replaced{average}{sum} these relative distances over the components. 
 
 The last methodological point which we need to emphasize is the relation between the present workflow and model exploration workflows in general. The ideas of multi-modeling and extensive model exploration are nothing from new as ~\cite{openshaw1983data} already advocated for ``model-crunching'', but their effective use only begins to emerge thanks to the development of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMOLE~\citep{reuillon2013openmole} allows to embed any model as a blackbox, to write modulable exploration workflow using advanced methodologies such as genetic algorithms and to distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, this tool is a powerful way to embed both the sensitivity analysis and the \deleted{meta-}sensitivity analysis \added{to initial spatial conditions}, and to allow the coupling of any spatial generator with any model in a straightforward way as long as the model can take its spatial configuration as an input or from an input file. In this paper, we use the OpenMOLE platform for the spatial environment and the model coupling, placing ourselves in the  framework of multi-modelling \citep{cottineau2015modular}. \added{We use therefore OpenMOLE's functionalities for model embedding through workflow, design of experiments (parameter sampling) and high performance environment access.}
 
@@ -399,7 +397,7 @@ As~\citet{pumain2003approche} points out in an overview of complexity approaches
 
 
 
-\section{Conclusion.}
+\section{Conclusion}
 
 After reviewing the extensive literature on spatial biases in statistical and simulation models, we presented a method to analyse the sensitivity of a simulation's results to the initial spatial configuration. We did so by implementing a spatial generator whose output is used as input for the simulation model. We applied this approach to two \replaced{textbook}{mythical} ABMs: Schelling and Sugarscape. With the Schelling experiment, we found that the different urban morphologies impact the interaction patterns, and that polycentric and discontinuous cities appear systematically more segregated than compact cities in terms of dissimilarity and entropy index. With Sugarscape, we show that the model is more sensitive to space than to its other parameters in the reference Netlogo implementation, both qualitatively and quantitatively: the amplitude of variations across density grids is larger than the amplitude in each phase diagram, and the behaviour of the phase diagram is qualitatively different in different regions of the morphological space. We think that this method has the potential to increase the arsenal of evaluation of geographical models, in order to assess the sensitivity of models to their initial spatial conditions but also to learn about the impact of the urban form on social mechanisms.
 %%%%%%%%%%%%%
@@ -461,7 +459,7 @@ After reviewing the extensive literature on spatial biases in statistical and si
 %%%
 %% Schelling
 
-
+For both models we estimate the Sharpe ratios for each indicator by
 
 
 
